<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    tools:context="com.avidos.avidospay.PayFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Administrar pagos -->

            <TextView
                android:id="@+id/label_manage_pay_methods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/label_manage_pay_methods"
                android:textAllCaps="true"/>

            <FrameLayout
                android:id="@+id/layout_established_payment_method"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_options"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:textAllCaps="true"
                    android:gravity="center_vertical"
                    android:text="@string/option_payment_established_method" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:tint="@color/colorGray"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_manage_pay_method"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_options"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:textAllCaps="true"
                    android:gravity="center_vertical"
                    android:text="@string/option_manage_payment_method" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:tint="@color/colorGray"/>

            </FrameLayout>

            <!-- Plan de pagos -->

            <TextView
                android:id="@+id/label_payment_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/label_payment_plans"
                android:textAllCaps="true"/>

            <FrameLayout
                android:id="@+id/layout_current_pay_plan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_options"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:textAllCaps="true"
                    android:gravity="center_vertical"
                    android:text="@string/option_current_pay_plan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="48dp"
                    android:layout_marginEnd="48dp"
                    android:textColor="@color/colorGray"
                    android:layout_gravity="end|center_vertical"
                    android:gravity="center_vertical"
                    android:text="Mensual" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:tint="@color/colorGray"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_manage_pay_plan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_options"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:textAllCaps="true"
                    android:gravity="center_vertical"
                    android:text="@string/option_manage_payment_plan" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:tint="@color/colorGray"/>

            </FrameLayout>

            <!-- Pagos -->

            <FrameLayout
                android:id="@+id/layout_pay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="64dp"
                android:background="@drawable/bg_options"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="48dp"
                    android:paddingStart="48dp"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:textAllCaps="true"
                    android:gravity="center_vertical"
                    android:text="@string/option_pay" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_credit_card_black_24dp"
                    android:tint="@color/colorAccent"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:tint="@color/colorGray"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_account_status"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_options"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="48dp"
                    android:paddingStart="48dp"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:textAllCaps="true"
                    android:gravity="center_vertical"
                    android:text="@string/option_account_status" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_account_balance_wallet_black_24dp"
                    android:tint="@color/colorPrimary"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:tint="@color/colorGray"/>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
