<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.avidos.avidospay.AddCardFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/image_back_arrow_add_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:src="@drawable/bg_left_arrow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:gravity="center_vertical"
            android:text="@string/option_add_card"/>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:hint="@string/hint_card_holder_name"
                    android:textStyle="bold"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/text_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:hint="@string/hint_card_number"
                    android:textStyle="bold"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/text_month_year"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingStart="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:paddingEnd="@dimen/activity_vertical_margin"
                        android:hint="@string/hint_month_year"
                        android:maxLength="5"
                        android:textStyle="bold"
                        android:inputType="phone"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingStart="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:paddingEnd="@dimen/activity_vertical_margin"
                        android:hint="@string/hint_cvv"
                        android:maxLength="3"
                        android:textStyle="bold"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:theme="@style/PrimaryButton"
                android:text="GUARDAR"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
